--- a/.github/workflows/infrastructure-ask-deployment.yml
+++ b/.github/workflows/infrastructure-ask-deployment.yml
@@ -34,30 +34,30 @@ jobs:
 
     - name: Terraform Init
       shell: bash
-      working-directory: '.'
+      working-directory: './terraform'
       run: |
         terraform init -backend-config="storage_account_name=${{ env.STORAGE_ACCOUNT }}" -backend-config="container_name=${{ env.CONTAINER_NAME }}" -backend-config="key=${{ env.ENVIRONMENT }}.aks.tfstate" -var "environment=${{ env.ENVIRONMENT }}"
 
     - name: Terraform Validate
       shell: bash
-      working-directory: '.'
+      working-directory: './terraform'
       run: terraform validate
 
     - name: Terraform Plan
       shell: bash
-      working-directory: '.'
+      working-directory: './terraform'
       run: |
         terraform plan -input=false -var-file=".\terraform\terraform.tfvars" -var "aks_service_principal_app_id=${{ secrets.AZURE_AD_CLIENT_ID }}"  -var "aks_service_principal_client_secret=${{ secrets.AZURE_AD_CLIENT_SECRET }}" -var "environment=${{ env.ENVIRONMENT }}"
 
     - name: Terraform Apply
       shell: bash
-      working-directory: '.'
+      working-directory: './terraform'
       run: terraform apply -auto-approve -input=false -var-file=".\terraform\terraform.tfvars" -var "aks_service_principal_app_id=${{ secrets.AZURE_AD_CLIENT_ID }}" -var "aks_service_principal_client_secret=${{ secrets.AZURE_AD_CLIENT_SECRET }}" -var "environment=${{ env.ENVIRONMENT }}"
 
     - name: Terraform Output
       id: terraform_outputs
       shell: bash
-      working-directory: '.'
+      working-directory: './terraform'
       run: |
         kube_config=$(terraform output kube_config)
 
@@ -93,7 +93,7 @@ jobs:
       with:
         tf_actions_version: 0.14.8
         tf_actions_subcommand: 'init'
-        tf_actions_working_dir: "./"
+        tf_actions_working_dir: './terraform'
         args:
           --backend-config="storage_account_name=${{ env.STORAGE_ACCOUNT }}"
           --backend-config="container_name=${{ env.CONTAINER_NAME }}"
@@ -105,14 +105,14 @@ jobs:
       with:
         tf_actions_version: 0.14.8
         tf_actions_subcommand: 'validate'
-        tf_actions_working_dir: "./"
+        tf_actions_working_dir: './terraform'
 
     - name: 'Terraform Plan'
       uses: hashicorp/terraform-github-actions@master
       with:
         tf_actions_version: 0.14.8
         tf_actions_subcommand: 'plan'
-        tf_actions_working_dir: "./"
+        tf_actions_working_dir: './terraform'
         args:
           -var-file=".\terraform\terraform.tfvars"
           -var "aks_service_principal_app_id=${{ secrets.AZURE_AD_CLIENT_ID }}"
@@ -124,7 +124,7 @@ jobs:
       with:
         tf_actions_version: 0.14.8
         tf_actions_subcommand: 'apply'
-        tf_actions_working_dir: "./"
+        tf_actions_working_dir: './terraform'
         args:
           -var-file=".\terraform\terraform.tfvars"
           -var "aks_service_principal_app_id=${{ secrets.AZURE_AD_CLIENT_ID }}"
@@ -137,4 +137,4 @@ jobs:
       with:
         tf_actions_version: 0.14.8
         tf_actions_subcommand: 'output'
-        tf_actions_working_dir: "./"
+        tf_actions_working_dir: './terraform'
