Define environment variable

--- a/.github/workflows/infrastructure-ask-deployment.yml
+++ b/.github/workflows/infrastructure-ask-deployment.yml
@@ -97,7 +97,7 @@ jobs:
         args:
           --backend-config="storage_account_name=${{ env.STORAGE_ACCOUNT }}"
           --backend-config="container_name=${{ env.CONTAINER_NAME }}"
-          --backend-config="key=${{ env.ENVIRONMENT }}.auth0.tfstate"
+          --backend-config="key=${{ env.ENVIRONMENT }}.aks.tfstate"
           -var "environment=${{ env.ENVIRONMENT }}"
 
     - name: 'Terraform Validate'
