--- a/.github/workflows/infrastructure-ask-deployment.yml
+++ b/.github/workflows/infrastructure-ask-deployment.yml
@@ -74,7 +74,7 @@ jobs:
       ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
       ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       ARM_TENANT_ID: ${{ secrets.AZURE_AD_TENANT_ID }}
-      STORAGE_ACCOUNT: storageaksstage
+      STORAGE_ACCOUNT: storageaksstaging
       CONTAINER_NAME: aks-container-stage
       ENVIRONMENT: STAGE
 
