--- a/.github/workflows/infrastructure-ask-deployment.yml
+++ b/.github/workflows/infrastructure-ask-deployment.yml
@@ -78,63 +78,42 @@ jobs:
       CONTAINER_NAME: aks-container-stage
       ENVIRONMENT: STAGE
 
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
-    defaults:
-      run:
-        shell: bash
-
     steps:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
-    - name: 'Terraform Init'
-      uses: hashicorp/terraform-github-actions@master
+    - uses: hashicorp/setup-terraform@v2
       with:
-        tf_actions_version: 0.14.8
-        tf_actions_subcommand: 'init'
-        tf_actions_working_dir: './terraform'
-        args:
-          --backend-config="storage_account_name=${{ env.STORAGE_ACCOUNT }}"
-          --backend-config="container_name=${{ env.CONTAINER_NAME }}"
-          --backend-config="key=${{ env.ENVIRONMENT }}.aks.tfstate"
-          -var "environment=${{ env.ENVIRONMENT }}"
+        terraform_wrapper: false
 
-    - name: 'Terraform Validate'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: 0.14.8
-        tf_actions_subcommand: 'validate'
-        tf_actions_working_dir: './terraform'
+    - name: Terraform Init
+      shell: bash
+      working-directory: './terraform'
+      run: |
+        terraform init -backend-config="storage_account_name=${{ env.STORAGE_ACCOUNT }}" -backend-config="container_name=${{ env.CONTAINER_NAME }}" -backend-config="key=${{ env.ENVIRONMENT }}.aks.tfstate" -var "environment=${{ env.ENVIRONMENT }}"
 
-    - name: 'Terraform Plan'
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: 0.14.8
-        tf_actions_subcommand: 'plan'
-        tf_actions_working_dir: './terraform'
-        args:
-          -var-file="terraform.tfvars"
-          -var "aks_service_principal_app_id=${{ secrets.AZURE_AD_CLIENT_ID }}"
-          -var "aks_service_principal_client_secret=${{ secrets.AZURE_AD_CLIENT_SECRET }}"
-          -var "environment=${{ env.ENVIRONMENT }}"
+    - name: Terraform Validate
+      shell: bash
+      working-directory: './terraform'
+      run: terraform validate
+
+    - name: Terraform Plan
+      shell: bash
+      working-directory: './terraform'
+      run: |
+        terraform plan -input=false -var-file="terraform.tfvars" -var "aks_service_principal_app_id=${{ secrets.AZURE_AD_CLIENT_ID }}"  -var "aks_service_principal_client_secret=${{ secrets.AZURE_AD_CLIENT_SECRET }}" -var "environment=${{ env.ENVIRONMENT }}"
 
     - name: Terraform Apply
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: 0.14.8
-        tf_actions_subcommand: 'apply'
-        tf_actions_working_dir: './terraform'
-        args:
-          -var-file="terraform.tfvars"
-          -var "aks_service_principal_app_id=${{ secrets.AZURE_AD_CLIENT_ID }}"
-          -var "aks_service_principal_client_secret=${{ secrets.AZURE_AD_CLIENT_SECRET }}"
-          -var "environment=${{ env.ENVIRONMENT }}"
+      shell: bash
+      working-directory: './terraform'
+      run: terraform apply -auto-approve -input=false -var-file="terraform.tfvars" -var "aks_service_principal_app_id=${{ secrets.AZURE_AD_CLIENT_ID }}" -var "aks_service_principal_client_secret=${{ secrets.AZURE_AD_CLIENT_SECRET }}" -var "environment=${{ env.ENVIRONMENT }}"
 
-    - name: 'Terraform Output'
-      id: terraform
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: 0.14.8
-        tf_actions_subcommand: 'output'
-        tf_actions_working_dir: './terraform'
+    - name: Terraform Output
+      id: terraform_outputs
+      shell: bash
+      working-directory: './terraform'
+      run: |
+        kube_config=$(terraform output kube_config)
+
+    - run: echo "${{ steps.terraform_outputs.outputs.kube_config }}"
