--- a/.github/workflows/infrastructure-ask-deployment.yml
+++ b/.github/workflows/infrastructure-ask-deployment.yml
@@ -91,7 +91,10 @@ jobs:
       shell: bash
       working-directory: './terraform'
       run: |
-        terraform init -backend-config="storage_account_name=${{ env.STORAGE_ACCOUNT }}" -backend-config="container_name=${{ env.CONTAINER_NAME }}" -backend-config="key=${{ env.ENVIRONMENT }}.aks.tfstate" -var "environment=${{ env.ENVIRONMENT }}"
+        terraform init -backend-config="storage_account_name=${{ env.STORAGE_ACCOUNT }}" \
+        -backend-config="container_name=${{ env.CONTAINER_NAME }}"
+        -backend-config="key=${{ env.ENVIRONMENT }}.aks.tfstate"
+        -var "environment=${{ env.ENVIRONMENT }}"
 
     - name: Terraform Validate
       shell: bash
@@ -102,12 +105,20 @@ jobs:
       shell: bash
       working-directory: './terraform'
       run: |
-        terraform plan -input=false -var-file="terraform.tfvars" -var "aks_service_principal_app_id=${{ secrets.AZURE_AD_CLIENT_ID }}"  -var "aks_service_principal_client_secret=${{ secrets.AZURE_AD_CLIENT_SECRET }}" -var "environment=${{ env.ENVIRONMENT }}"
+        terraform plan -input=false -var-file="terraform.tfvars" \
+          -var "aks_service_principal_app_id=${{ secrets.AZURE_AD_CLIENT_ID }}"  \
+          -var "aks_service_principal_client_secret=${{ secrets.AZURE_AD_CLIENT_SECRET }}" \
+          -var "aks_service_principal_object_id =${{ secrets.AZURE_SERVICE_PRINCIPAL_OBJECT_ID }}" \
+          -var "environment=${{ env.ENVIRONMENT }}"
 
     - name: Terraform Apply
       shell: bash
       working-directory: './terraform'
-      run: terraform apply -auto-approve -input=false -var-file="terraform.tfvars" -var "aks_service_principal_app_id=${{ secrets.AZURE_AD_CLIENT_ID }}" -var "aks_service_principal_client_secret=${{ secrets.AZURE_AD_CLIENT_SECRET }}" -var "environment=${{ env.ENVIRONMENT }}"
+      run: terraform apply -auto-approve -input=false -var-file="terraform.tfvars" \
+        -var "aks_service_principal_app_id=${{ secrets.AZURE_AD_CLIENT_ID }}" \
+        -var "aks_service_principal_client_secret=${{ secrets.AZURE_AD_CLIENT_SECRET }}" \
+        -var "aks_service_principal_object_id =${{ secrets.AZURE_SERVICE_PRINCIPAL_OBJECT_ID }}" \
+        -var "environment=${{ env.ENVIRONMENT }}"
 
     - name: Terraform Output
       id: terraform_outputs
