Set hardcode for principle id

--- a/.github/workflows/infrastructure-ask-deployment.yml
+++ b/.github/workflows/infrastructure-ask-deployment.yml
@@ -107,7 +107,7 @@ jobs:
       run: |
         terraform plan -input=false -var "aks_service_principal_app_id=${{ secrets.AZURE_AD_CLIENT_ID }}"  \
           -var "aks_service_principal_client_secret=${{ secrets.AZURE_AD_CLIENT_SECRET }}" \
-          -var "aks_service_principal_object_id=${{ secrets.AZURE_SERVICE_PRINCIPAL_OBJECT_ID }}" \
+          -var "aks_service_principal_object_id=20b97b7a-a46b-4b3e-a287-ddaea4e84f99" \
           -var "environment=${{ env.ENVIRONMENT }}"
 
     - name: Terraform Apply
@@ -115,7 +115,7 @@ jobs:
       working-directory: './terraform'
       run: terraform apply -auto-approve -input=false -var "aks_service_principal_app_id=${{ secrets.AZURE_AD_CLIENT_ID }}" \
         -var "aks_service_principal_client_secret=${{ secrets.AZURE_AD_CLIENT_SECRET }}" \
-        -var "aks_service_principal_object_id=${{ secrets.AZURE_SERVICE_PRINCIPAL_OBJECT_ID }}" \
+        -var "aks_service_principal_object_id=20b97b7a-a46b-4b3e-a287-ddaea4e84f99" \
         -var "environment=${{ env.ENVIRONMENT }}"
 
     - name: Terraform Output
